Fix: Add footer on documentation pages on mobile

--- a/src/styles/objects/_container.scss
+++ b/src/styles/objects/_container.scss
@@ -38,6 +38,10 @@
 
   &.with-second-menu-displayed .footer {
     margin-left: $docmenuW;
+
+    @include mq($max-width: $vw-medium) {
+      margin-left: 0;
+    }
   }
 }
 
